--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
 
+    <head> 
+        <title> London Trip</title>
+    </head>
+
+    <body>
+        test
+    </body>
+</html>
