--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     </head>
 
     <body>
-        test
+        <header>
+            <h1>Il mio Viaggio a Londra</h1>
+            <div>
+                <img src="img/pexels-bill-emrich-230794-0.jpg" alt="London Eye" />
+                <img src="img/pexels-bill-emrich-230794-1.jpg" alt="Westminster Bridge" />
+                <img src="img/pexels-bill-emrich-230794-2.jpg" alt="Big Bang" />
+            </div>
+            <hr />
+        </header>
     </body>
 </html>
