--- a/index.html
+++ b/index.html
@@ -53,5 +53,56 @@
                 </table>
                 <hr>
             </section>
+            <!-- fine spese-->
+             <main>
+        <!-- section mie spese -->
+        <section>
+            <h2>Le mie spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Totale</td>
+                        <td>360€</td>
+                    </tr>
+                </tfoot>
+            </table>
+            <hr>
+        </section>
+        <!--  cose da fare -->
+        <section>
+            <h3>Cose daa fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare greenwich &check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+            </ul>
+            <hr>
+        </section>
+        <!-- / cose da fare -->
     </body>
 </html>
