--- a/index.html
+++ b/index.html
@@ -97,5 +97,17 @@
             <hr>
         </section>
         <!-- / info utili -->
+        <!--  foto  -->
+        <section>
+            <h3>Le foto</h3>
+            <div>
+                <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Millenium Bridge" />
+                <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Tower Bridge" />
+            </div>
+            <hr>
+        </section>
+        <!-- / foto  -->
     </body>
+</main>
+    
 </html>
